<resources>
    <string name="app_name">upr5</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="phone_number">Phone number</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="google_maps">Google maps</string>
</resources>